Change iframe source and update about link
Updated iframe source and link in navigation.

--- a/index.html
+++ b/index.html
@@ -74,14 +74,15 @@
     <nav>
       <a href="#home">首页</a>
       <a href="#projects">作品集</a>
-      <a href="https://www.notion.so/LengYu-s-Webside-2a8b126d2a9280c6bcfdc73bc9936861" target="_blank">关于我</a>
+      <a href="https://tremendous-houseboat-588.notion.site/LengYu-s-Webside-2a8b126d2a9280c6bcfdc73bc9936861" target="_blank">关于我</a>
       <a href="#contact">联系</a>
     </nav>
   </header>
 
-  <iframe src="https://www.notion.so/LengYu-s-Webside-2a8b126d2a9280c6bcfdc73bc9936861" allowfullscreen></iframe>
+  <iframe src="https://tremendous-houseboat-588.notion.site/LengYu-s-Webside-2a8b126d2a9280c6bcfdc73bc9936861" allowfullscreen></iframe>
 
   <footer>© 2025 LengYu Network Technology · All Rights Reserved</footer>
 
 </body>
 </html>
+
