--- a/index.html
+++ b/index.html
@@ -3,112 +3,110 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LengYu Network Technology</title>
+  <title>LengYu’s Webside</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      color: #333;
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
-    header {
-      background-color: #222;
-      color: #fff;
-      padding: 40px 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5em;
-    }
-    header p {
-      font-size: 1.2em;
-      margin-top: 10px;
-    }
-    .container {
-      max-width: 900px;
-      margin: 50px auto;
-      padding: 0 20px;
-    }
-    .notion-btn {
-      display: inline-block;
-      margin: 20px 0;
-      padding: 15px 30px;
-      background-color: #4caf50;
-      color: white;
-      text-decoration: none;
-      font-size: 18px;
-      border-radius: 8px;
-      transition: background 0.3s;
-    }
-    .notion-btn:hover {
-      background-color: #45a049;
-    }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 40px;
-    }
-    .gallery-item {
-      background: #fff;
-      border-radius: 8px;
+
+    body, html {
+      height: 100%;
+      font-family: 'Segoe UI', sans-serif;
       overflow: hidden;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      text-align: center;
     }
-    .gallery-item img {
+
+    /* 背景图片 */
+    .background {
+      position: fixed;
       width: 100%;
-      display: block;
+      height: 100%;
+      background: url("微信图片_20251111192915_202_128.jpg") no-repeat center center/cover;
+      filter: brightness(0.6);
+      z-index: 1;
     }
-    .gallery-item p {
-      margin: 10px 0;
-      font-size: 14px;
-      color: #666;
-    }
-    footer {
+
+    /* 主内容 */
+    .content {
+      position: relative;
+      z-index: 2;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: #ffffff;
       text-align: center;
-      padding: 30px 20px;
-      background: #222;
-      color: #fff;
-      margin-top: 50px;
     }
+
+    h1 {
+      font-size: 3em;
+      text-shadow: 0 0 20px rgba(0, 255, 255, 0.6);
+      margin-bottom: 30px;
+      animation: glow 2s ease-in-out infinite alternate;
+    }
+
+    @keyframes glow {
+      from {
+        text-shadow: 0 0 10px #0ff, 0 0 20px #0ff;
+      }
+      to {
+        text-shadow: 0 0 30px #00ffff, 0 0 60px #00ffff;
+      }
+    }
+
+    .button {
+      padding: 15px 35px;
+      font-size: 1.1em;
+      color: #fff;
+      border: none;
+      border-radius: 12px;
+      background: linear-gradient(90deg, #00f5ff, #00ffaa);
+      box-shadow: 0 0 20px #00ffff;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      text-decoration: none;
+    }
+
+    .button:hover {
+      background: linear-gradient(90deg, #00ffaa, #00f5ff);
+      box-shadow: 0 0 35px #00ffff, 0 0 60px #00ffff;
+      transform: scale(1.05);
+    }
+
+    /* 底部文字 */
+    .footer {
+      position: absolute;
+      bottom: 20px;
+      width: 100%;
+      text-align: center;
+      color: rgba(255, 255, 255, 0.7);
+      font-size: 0.9em;
+      z-index: 3;
+      animation: fadeInOut 6s ease-in-out infinite;
+      text-shadow: 0 0 10px rgba(0, 255, 255, 0.4);
+    }
+
+    @keyframes fadeInOut {
+      0%, 100% { opacity: 0.6; }
+      50% { opacity: 1; }
+    }
+
   </style>
 </head>
 <body>
+  <div class="background"></div>
 
-  <header>
-    <h1>LengYu Network Technology</h1>
-    <p>个人介绍 & 摄影作品展示</p>
-  </header>
-
-  <div class="container">
-    <a href="https://www.notion.so/LengYu-s-Webside-2a8b126d2a9280c6bcfdc73bc9936861" target="_blank" class="notion-btn">
-      查看 Notion 页面
+  <div class="content">
+    <h1>LengYu’s Webside</h1>
+    <a href="https://www.notion.so/LengYu-s-Webside-2a8b126d2a9280c6bcfdc73bc9936861" target="_blank" class="button">
+      进入 LengYu’s Webside
     </a>
-
-    <h2>摄影作品示例</h2>
-    <div class="gallery">
-      <div class="gallery-item">
-        <img src="https://via.placeholder.com/400x300?text=作品1" alt="作品1">
-        <p>相机型号：Canon EOS R</p>
-      </div>
-      <div class="gallery-item">
-        <img src="https://via.placeholder.com/400x300?text=作品2" alt="作品2">
-        <p>相机型号：Sony A7 IV</p>
-      </div>
-      <div class="gallery-item">
-        <img src="https://via.placeholder.com/400x300?text=作品3" alt="作品3">
-        <p>相机型号：Fujifilm X-T4</p>
-      </div>
-      <!-- 可以按需增加更多作品 -->
-    </div>
   </div>
 
-  <footer>
-    &copy; 2025 LengYu Network Technology
-  </footer>
-
+  <div class="footer">
+    © 2025 LengYu Network Technology
+  </div>
 </body>
 </html>
