--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LengYu Network Technolog</title>
+  <title>LengYu Network Technology</title>
   <style>
     * {
       margin: 0;
@@ -110,5 +110,6 @@
   </div>
 </body>
 </html>
+
 
 
