--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div class="background"></div>
 
   <div class="content">
-    <h1>LengYu’s Webside</h1>
+    <h1>LengYu Network Technology</h1>
     <a href="https://www.notion.so/LengYu-s-Webside-2a8b126d2a9280c6bcfdc73bc9936861" target="_blank" class="button">
       进入 LengYu’s Webside
     </a>
@@ -110,6 +110,7 @@
   </div>
 </body>
 </html>
+
 
 
 
