--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <div class="content">
     <h1>LengYu Network Technology</h1>
-    <a href="https://www.notion.so/LengYu-s-Webside-2a8b126d2a9280c6bcfdc73bc9936861" target="_blank" class="button">
+    <a href="https://tremendous-houseboat-588.notion.site/LengYu-s-Webside-2a8b126d2a9280c6bcfdc73bc9936861?source=copy_link" target="_blank" class="button">
       进入 LengYu’s Webside
     </a>
   </div>
@@ -110,6 +110,7 @@
   </div>
 </body>
 </html>
+
 
 
 
