--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ window.addEventListener('load',()=>{
 });
 
 const links=[
-  { name:"进入 LengYu‘s Webside", url:"https://www.notion.so/LengYu-s-Webside-2a8b126d2a9280c6bcfdc73bc9936861", password:"lengyu2025" },
+  { name:"进入 LengYu‘s Webside", url:"https://www.notion.so/LengYu-s-Webside-2a8b126d2a9280c6bcfdc73bc9936861", password:"wuzhong2025" },
 ];
 
 const attempts={}, locked={}, failedSeries={};
@@ -298,3 +298,4 @@ function lockTarget(url,seconds){
 </script>
 </body>
 </html>
+
