--- a/index.html
+++ b/index.html
@@ -195,9 +195,7 @@ window.addEventListener('load',()=>{
 });
 
 const links=[
-  { name:"进入 LengYu‘s Webside", url:"https://www.notion.so/LengYu-s-Webside-2a8b126d2a9280c6bcfdc73bc9936861", password:"lengyu2025" },
-  { name:"进入 摄影站", url:"https://photo.lengyu.com", password:"photo2025" },
-  { name:"进入 博客", url:"https://blog.lengyu.com", password:"blog2025" },
+  { name:"进入 LengYu‘s Webside", url:"https://www.notion.so/LengYu-s-Webside-2a8b126d2a9280c6bcfdc73bc9936861", password:"wuzhong2025" },
 ];
 
 const attempts={}, locked={}, failedSeries={};
@@ -329,3 +327,4 @@ function lockTarget(url,seconds){
 </script>
 </body>
 </html>
+
