--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ window.addEventListener('load',()=>{
 
 const links=[
   { name:"进入 LengYu‘s Webside", url:"https://www.notion.so/LengYu-s-Webside-2a8b126d2a9280c6bcfdc73bc9936861", password:"wuzhong2025" },
-  { name:"进入 留言版密码111", url:"https://lyy-message.vercel.app/", password:"111" },
+  { name:"进入 留言板 密码111", url:"https://lyy-message.vercel.app/", password:"111" },
   ];
 
 const attempts={}, locked={}, failedSeries={};
@@ -328,4 +328,5 @@ function lockTarget(url,seconds){
 </script>
 </body>
 </html>
+
 
